@@ -1,6 +1,6 @@
 source 'https://rubygems.org'
 
-gem 'rails',                '3.2.6'
+gem 'rails',                '3.2.8'
 
 # Database Adapter
 # Install instructions for Windows: http://blog.mmediasys.com/2011/07/07/installing-mysql-on-windows-7-x64-and-using-ruby-with-it/
@@ -9,8 +9,8 @@ gem 'thin',                 '~> 1.4.1',           :platforms => [ :mswin, :mingw
 gem 'eventmachine',         '~> 1.0.0.rc.4',      :platforms => [ :mswin, :mingw ]
 
 # Gems used by project
-gem 'contour',              '~> 1.0.0'
-gem 'kaminari'
+gem 'contour',              '~> 1.0.5'
+gem 'kaminari',             '~> 0.13.0'
 # Builder: For Building XML messages for Web service based data sources
 gem 'builder',              '~> 3.0.0'
 
