@@ -13,7 +13,7 @@ class DictionariesController < ApplicationController
   end
 
   def index
-    # current_user.update_attribute :users_per_page, params[:users_per_page].to_i if params[:users_per_page].to_i >= 10 and params[:users_per_page].to_i <= 200
+    # current_user.update_column :users_per_page, params[:users_per_page].to_i if params[:users_per_page].to_i >= 10 and params[:users_per_page].to_i <= 200
     @order = params[:order].blank? ? 'dictionaries.name' : params[:order]
     dictionary_scope = Dictionary.current
     @search_terms = params[:search].to_s.gsub(/[^0-9a-zA-Z]/, ' ').split(' ')
