@@ -1,7 +1,7 @@
 class Term < ActiveRecord::Base
   belongs_to :concept
-  
+
   def update_search_name!
-    self.update_attribute :search_name, self.name.gsub(/[^\w']/, ' ').titleize.downcase
+    self.update_column :search_name, self.name.gsub(/[^\w']/, ' ').titleize.downcase
   end
 end
