@@ -1,9 +1,10 @@
 == 0.12.0
 
 * Enhancements
-  * Updated to Rails 3.2.4 and Contour 1.0.0
+  * Updated to Rails 3.2.8 and Contour 1.0.5
   * Updated Devise configuration files for devise 2.1.0
   * Links with confirm: now use data: { confirm: } to account for deprecations in Rails 4.0
+  * Removed deprecated use of update_attribute for Rails 4.0 compatibility
 
 * Testing
   * Use ActionDispatch for Integration tests instead of ActionController
